--- a/src/components/Courses/style.css
+++ b/src/components/Courses/style.css
@@ -6,7 +6,7 @@
 }
 
 .img-resize {
-    width: 100px;
+    width: 300px;
     /* Set the desired width */
     height: auto;
     /* Maintain aspect ratio */
@@ -39,4 +39,25 @@
     /* Define the border style */
     padding: 8px;
     /* Add some padding for better spacing */
+}
+
+.form-container {
+    width: 25%;
+    /* Set the width to 25% of the screen */
+}
+
+.input-group {
+    margin-bottom: 10px;
+    /* Add some spacing between input groups */
+}
+
+.input-group label {
+    display: block;
+}
+
+.input-group input,
+.input-group textarea,
+.input-group select {
+    width: 100%;
+    /* Set the width of the inputs to 100% of their container */
 }
