--- a/src/components/Courses/style.css
+++ b/src/components/Courses/style.css
@@ -6,7 +6,7 @@
 }
 
 .img-resize {
-    width: 300px;
+    width: 200px;
     /* Set the desired width */
     height: auto;
     /* Maintain aspect ratio */
@@ -42,7 +42,7 @@
 }
 
 .form-container {
-    width: 25%;
+    width: 55%;
     /* Set the width to 25% of the screen */
 }
 
@@ -62,6 +62,10 @@
     /* Set the width of the inputs to 100% of their container */
 }
 
-label, h1, h2, th, td {
-    color:white;
+label,
+h1,
+h2,
+th,
+td {
+    color: white;
 }
